agregar funcionalidad con 2 botones en vez de 1

--- a/sprint5/src/app/escena/escena.component.html
+++ b/sprint5/src/app/escena/escena.component.html
@@ -1,37 +1,16 @@
-<!-- <h3>Dedica muchas horas</h3>
-<p>Al menos 30 horas a la semana. Si no tienes suficiente, tendrás que dedicarle más horas.
-Al principio parece imposible, pero notarás una mejoría rápidamente.</p> -->
-<!--
-<div class="container">
-  @for(step of steps; track step.title){
-    <div class="card">
-      <div class="step" [ngStyle]="{'background-color': step.bgcolor}">
-        <img [src]="step.img" class="card-img-top" alt="imagen">
-      </div>
-      <div class="card-body">
-        <h5 class="card-title"> {{step.title}}</h5>
-        <p class="card-text"> {{step.descripcion}}</p>
-      </div>
-      <button class="icon-button" (click)="handleClick()">
-        <img src="assets/circle-arrow-right-solid.svg" alt="icono">
-      </button>
-    </div>
-    }
-</div> -->
-
 <div class="container custom-container">
   <div class="card">
     @if(steps.length > 0){
-    <div class="step" [ngStyle]="{'background-color': steps[currentStep].bgcolor}">
-      <img [src]="steps[currentStep].img" class="card-img-top" alt="imagen">
-    </div>
-    <div class="card-body">
-      <h5 class="card-title">{{ steps[currentStep].title }}</h5>
-      <p class="card-text">{{ steps[currentStep].descripcion }}</p>
-    </div>
-    <div>
+      <div class="step" [ngStyle]="{'background-color': steps[currentStep].bgcolor}">
+        <img [src]="steps[currentStep].img" class="card-img-top" alt="imagen">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">{{ steps[currentStep].title }}</h5>
+        <p class="card-text">{{ steps[currentStep].descripcion }}</p>
+      </div>
+      <div>
       <div class="navigation-container">
-        <div class="indicators">
+        <div class="indicators" >
           @for (step of steps; track step.title) {
             <button class="dots-button" (click)="handleDots(steps.indexOf(step))">
               @if (steps.indexOf(step) === currentStep) {
@@ -42,13 +21,18 @@ Al principio parece imposible, pero notarás una mejoría rápidamente.</p> -->
             </button>
           }
         </div>
-        <button class="icon-button" (click)="handleClick()">
-          @if (isReversing) {
-            <img src="assets/circle-arrow-left-solid.svg" alt="icono">
-          } @else {
-            <img src="assets/circle-arrow-right-solid.svg" alt="icono">
+        <div class="icon-buttons">
+          @if (currentStep > 0) {
+            <button class="icon-button" (click)="prevStep()">
+              <img src="assets/circle-arrow-left-solid.svg" alt="icono">
+            </button>
           }
-        </button>
+          @if (currentStep < steps.length - 1) {
+            <button class="icon-button" (click)="nextStep()">
+              <img src="assets/circle-arrow-right-solid.svg" alt="icono">
+            </button>
+          }
+        </div>
       </div>
     </div>
   }
